Bug 421187 - Cannot send bug reports: [113] Sorry, but you are not allowed to (un)mark comments or attachments as private..
Summary: Cannot send bug reports: [113] Sorry, but you are not allowed to (un)mark com...
Status: RESOLVED FIXED
Alias: None
Product: drkonqi
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.18.4
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 421349 421803 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-05-08 14:46 UTC by Szőts Ákos
Modified: 2020-05-20 08:52 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.18.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Szőts Ákos 2020-05-08 14:46:16 UTC
I wanted to send a duplicate KRunner crash report with a long backtrace attached to the original, already existing report but at the final step Dr Konqi reported me this issue you can see in the title.
Comment 1 Harald Sitter 2020-05-12 09:53:23 UTC
What's the bug report number you wanted to attach to?
Comment 2 Szőts Ákos 2020-05-12 10:00:29 UTC
Sorry, I indeed forgot to mention the other report number. It's Bug 416228.
Comment 3 Harald Sitter 2020-05-12 10:22:00 UTC
*** Bug 421349 has been marked as a duplicate of this bug. ***
Comment 4 Harald Sitter 2020-05-12 10:23:34 UTC
I can't really reproduce but am reasonably confident that what is happen is that a property gets the wrong default value because it has no explicit default value and so drkonqi accidentally tries to make a private comment.
Comment 5 Harald Sitter 2020-05-12 11:51:34 UTC
Git commit c517b795936fdab641849ca83ec8c3e253e32de8 by Harald Sitter.
Committed on 12/05/2020 at 11:50.
Pushed by sitter into branch 'Plasma/5.18'.

initialize bools to false by default

Summary:
This should fix random 113 errors (user_not_insider) coming out of the api

I can't really reproduce the problem other than by setting the bools
explicitly to true. Seeing as they were previously not set explicitly
they could very well end up true accidentally.
To fix this let's set them explicitly false.
FIXED-IN: 5.18.6

Test Plan:
hoping for the best!
tests still pass tho

Reviewers: davidedmundson, apol

Reviewed By: apol

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D29675

M  +2    -2    src/bugzillaintegration/libbugzilla/clients/commands/newattachment.h

https://commits.kde.org/drkonqi/c517b795936fdab641849ca83ec8c3e253e32de8
Comment 6 Harald Sitter 2020-05-20 08:52:31 UTC
*** Bug 421803 has been marked as a duplicate of this bug. ***