initialize bools to false by default

Summary:
This should fix random 113 errors (user_not_insider) coming out of the api

I can't really reproduce the problem other than by setting the bools
explicitly to true. Seeing as they were previously not set explicitly
they could very well end up true accidentally.
To fix this let's set them explicitly false.

BUG: 421187
FIXED-IN: 5.18.6

Test Plan:
hoping for the best!
tests still pass tho

Reviewers: davidedmundson, apol

Reviewed By: apol

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D29675